--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>reading</title>
+    <title>読書会話</title>
     <link href="reset.css" rel="stylesheet" type="text/css">
   </head>
   <body>
